UPDATE: README with ep.03 items

--- a/aws/eu-west-1/06_eks_apps/helm_values/argocd.yaml
+++ b/aws/eu-west-1/06_eks_apps/helm_values/argocd.yaml
@@ -17,4 +17,4 @@ configs:
   cm:
     # -- Create the argocd-cm configmap for [declarative setup]
     create: true
-    url: "https://argocd.prod.infra.disco-anywhere.com"
+    url: "https://argocd.prod.infra.garageeducation.com"
