--- a/aws/eu-west-1/06_eks_apps/helm_values/argocd.yaml
+++ b/aws/eu-west-1/06_eks_apps/helm_values/argocd.yaml
@@ -2,7 +2,8 @@ server:
   ingress:
     enabled: true
     ingressClassName: "nginx"
-    hostname: "argocd.prod.infra.garageeducation.org"
+    hosts:
+      - argocd.prod.infra.garageeducation.org
     annotations:
       cert-manager.io/cluster-issuer: letsencrypt-production
     tls:
@@ -17,4 +18,4 @@ configs:
   cm:
     # -- Create the argocd-cm configmap for [declarative setup]
     create: true
-    url: "https://argocd.prod.infra.garageeducation.com"
+    url: "https://argocd.prod.infra.garageeducation.org"
