--- a/aws/eu-west-1/06_eks_apps/helm_values/argocd.yaml
+++ b/aws/eu-west-1/06_eks_apps/helm_values/argocd.yaml
@@ -1,21 +1,15 @@
+global:
+  domain: argocd.prod.infra.garageeducation.org
 server:
   ingress:
     enabled: true
-    ingressClassName: "nginx"
-    hosts:
-      - argocd.prod.infra.garageeducation.org
-    annotations:
-      cert-manager.io/cluster-issuer: letsencrypt-production
-    tls:
-      - secretName: letsencrypt-production
-        hosts:
-          - argocd.prod.infra.garageeducation.org
+    ingressClassName: nginx
+    extraTls:
+      - hosts:
+        - argocd.prod.infra.garageeducation.org
+        secretName: letsencrypt-production
 notifications:
   argocdUrl: "https://argocd.prod.infra.garageeducation.org"
 configs:
   params:
     server.insecure: true
-  cm:
-    # -- Create the argocd-cm configmap for [declarative setup]
-    create: true
-    url: "https://argocd.prod.infra.garageeducation.org"
