Update argocd apps

--- a/aws/eu-west-1/06_eks_apps/helm_values/argocd.yaml
+++ b/aws/eu-west-1/06_eks_apps/helm_values/argocd.yaml
@@ -13,3 +13,5 @@ notifications:
 configs:
   params:
     server.insecure: true
+  secret: #TODO: update secret manager
+    argocdServerAdminPassword: "$2a$10$VHMX5USGeocoDwM6y7THC.ZaeFmUFI3VCIcUUlmgRNtooNpMxbq7W"
