--- a/apps/metabase/metabase_external_secret.yaml
+++ b/apps/metabase/metabase_external_secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: tf-datasquad-eks-metabase-db-secret
+  name: tf-metabase-db-secret
   namespace: metabase
 spec:
   refreshInterval: 1h
@@ -9,30 +9,30 @@ spec:
     name: tf-datasquad-eks-metabase-db-store
     kind: SecretStore
   target:
-    name: tf-datasquad-eks-metabase-db-secret
+    name: tf-metabase-db-secret
     creationPolicy: Owner
   data:
   - secretKey: MB_DB_TYPE # env key
     remoteRef:
-      key: tf-datasquad-eks-metabase-db-secret #AWS secret name
+      key: tf-metabase-db-secret #AWS secret name
       property: MB_DB_TYPE  #AWS secret key
   - secretKey: MB_DB_DBNAME
     remoteRef:
-      key: tf-datasquad-eks-metabase-db-secret
+      key: tf-metabase-db-secret
       property: MB_DB_DBNAME
   - secretKey: MB_DB_PORT
     remoteRef:
-      key: tf-datasquad-eks-metabase-db-secret
+      key: tf-metabase-db-secret
       property: MB_DB_PORT
   - secretKey: MB_DB_USER
     remoteRef:
-      key: tf-datasquad-eks-metabase-db-secret
+      key: tf-metabase-db-secret
       property: MB_DB_USER
   - secretKey: MB_DB_PASS
     remoteRef:
-      key: tf-datasquad-eks-metabase-db-secret
+      key: tf-metabase-db-secret
       property: MB_DB_PASS
   - secretKey: MB_DB_HOST
     remoteRef:
-      key: tf-datasquad-eks-metabase-db-secret
+      key: tf-metabase-db-secret
       property: MB_DB_HOST
