Update Metabase secret URL

--- a/apps/meta/metabase_external_secret.yaml
+++ b/apps/meta/metabase_external_secret.yaml
@@ -12,18 +12,10 @@ spec:
     name: tf-metabase-db-secret
     creationPolicy: Owner
   data:
-  - secretKey: MB_DB_TYPE # env key
+  - secretKey: MB_DB_URL # env key
     remoteRef:
       key: tf-metabase-db-secret #AWS secret name
-      property: MB_DB_TYPE  #AWS secret key
-  - secretKey: MB_DB_DBNAME
-    remoteRef:
-      key: tf-metabase-db-secret
-      property: MB_DB_DBNAME
-  - secretKey: MB_DB_PORT
-    remoteRef:
-      key: tf-metabase-db-secret
-      property: MB_DB_PORT
+      property: MB_DB_URL  #AWS secret key
   - secretKey: MB_DB_USER
     remoteRef:
       key: tf-metabase-db-secret
@@ -32,7 +24,3 @@ spec:
     remoteRef:
       key: tf-metabase-db-secret
       property: MB_DB_PASS
-  - secretKey: MB_DB_HOST
-    remoteRef:
-      key: tf-metabase-db-secret
-      property: MB_DB_HOST
